[package]
name = "known-folders"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_System_Com",
  "Win32_UI_Shell",
]

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.4"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  # Tier 1
  "i686-pc-windows-gnu",
  "i686-pc-windows-msvc",
  "x86_64-pc-windows-gnu",
  "x86_64-pc-windows-msvc",
  # Tier 2
  #  "aarch64-pc-windows-msvc",
  #  "i586-pc-windows-msvc",
]
