[package]
name = "known-folders"
version = "1.0.0" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.56.0"
readme = "README.md"
repository = "https://github.com/artichoke/known-folders-rs"
documentation = "https://docs.rs/known-folders"
homepage = "https://github.com/artichoke/known-folders-rs"
description = "A safe wrapper around the Known Folders API on Windows"
keywords = ["app_dirs", "known-folder", "path", "windows"]
categories = ["api-bindings", "filesystem", "os::windows-apis"]
include = ["examples/**/*", "src/**/*", "tests/**/*", "LICENSE-*", "README.md"]

[dependencies]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_System_Com",
  "Win32_UI_Shell",
]

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.4"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  # Tier 1
  "i686-pc-windows-gnu",
  "i686-pc-windows-msvc",
  "x86_64-pc-windows-gnu",
  "x86_64-pc-windows-msvc",
  # Tier 2
  #  "aarch64-pc-windows-msvc",
  #  "i586-pc-windows-msvc",
]
